Create model object to better represent the different states that the generate button can be in, and under what circumstances it should be enabled. Do a larger sweep to better enforce MVC (where swing allows it) in the process